src/objects/Bhat_Activity_Reminder_Sender_List__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Bhat Activity Reminder Sender List</description>
    <fields>
        <fullName>Division_Head_Login__c</fullName>
        <description>Division Head Login</description>
        <label>Division Head Login</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Head_Name__c</fullName>
        <label>Division Head Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Division</description>
        <label>Division</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <label>Bhat Activity Reminder Sender List</label>
</CustomObject>